# mgis

./: CMakeLists.txt
include/: Features.h  GeoTypes.hpp  MapView.h  Projection.h  Stylers.h
src/: Features.cpp  MapView.cpp  Projection.cpp  Stylers.cpp
tests/: sample_window.cpp  test_proj.cpp
